--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@tanstack/react-query": "^5.60.5",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "bootstrap-icons": "^1.11.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -70,6 +71,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.4.0",
+    "react-pdf": "^9.2.1",
     "react-resizable-panels": "^2.1.4",
     "react-router-dom": "^7.5.2",
     "recharts": "^2.13.0",
